--- a/mymoney/src/main/res/values/strings.xml
+++ b/mymoney/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">败家</string>
+    <string name="app_name">钱包</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
