--- a/mymoney/src/main/res/values/strings.xml
+++ b/mymoney/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
-    <string name="navigation_home">首页</string>
+    <string name="navigation_account">账户</string>
+    <string name="navigation_expense">支出</string>
+    <string name="navigation_income">收入</string>
     <string name="navigation_category">分类</string>
     <string name="navigation_report">统计</string>
     <string name="navigation_setting">设置</string>
