--- a/mymoney/src/main/res/values/strings.xml
+++ b/mymoney/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="navigation_category">分类</string>
     <string name="navigation_report">统计</string>
     <string name="navigation_setting">设置</string>
+
+    <string name="default_num">0.0</string>
 </resources>
