--- a/mymoney/src/main/res/values/strings.xml
+++ b/mymoney/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="navigation_setting">设置</string>
 
     <string name="default_num">0.0</string>
+    <string name="text_datetime">时间</string>
 </resources>
